<resources>
    <string name="app_name">Clover</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="TimeUntilNow">我们已经相爱</string>
    <string name="Days">天</string>
    <string name="anniversary">纪念日</string>
    <string name="age">岁</string>
    <string name="editUserInfo">编辑资料</string>
    <string name="mylover">我的情侣</string>
    <string name="setting">设置</string>
    <string name="quit">退出</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="sleeping">正在睡觉</string>
    <string name="getupreminder">发送闹钟</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="sorryforquery">未获取到数据</string>
    <string name="kindreminder">温馨提示</string>
    <string name="getuprenminder">对方睡觉，是否叫醒对方</string>
    <string name="makesure">确定</string>
    <string name="cancel">取消</string>

    <string name="sleep_msg">我睡觉了</string>
    <string name="getup_mas">该起床了</string>
    <string name="eat_msg">我吃饭去了</string>
    <string name="game_msg">我在玩游戏</string>
    <string name="shop_msg">我在逛街</string>
    <string name="miss_msg">我想你了</string>
    <string name="apologize_msg">我错了</string>
    <string name="boring_msg">好无聊呀</string>
    <string name="do_msg">你在做什么呀</string>
    <string name="kiss_msg">亲亲</string>
    <string name="hug_msg">抱抱</string>
    <string name="miao_msg">喵喵</string>
    <string name="wang_msg">汪汪</string>
    <string name="menses_coming_msg">大姨妈来了</string>
    <string name="menses_going_msg">大姨妈走了</string>

    <string name="menses_tell_msg">告诉他，姨妈来了</string>
    <string name="menses_gone_msg">告诉他，姨妈走了</string>
    <string name="disease_come_msg">我生病了</string>
    <string name="disease_gone_msg">病好了</string>
    <string name="drugreminder">记得吃药</string>
    <string name="diseasereminder">您的恋人生病了</string>
    <string name="eatdrug">该吃药了</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_age">年龄</string>
    <string name="add_sex">性别</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="takephoto">拍照</string>
    <string name="choosefrommibile">从相册选择</string>
    <string name="finish">完成</string>
    <string name="inputnick">请输入昵称</string>
    <string name="pleaseinputnick">请输入昵称</string>
    <string name="updatesuccess">修改成功</string>
    <string name="updatefailure">修改失败</string>
    <string name="wrongbirthdate">您输入的出生日期在今天之后，这是不可能的，请重新输入</string>
    <string name="pleaseselectsex">请选择性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>

    <string name="changepassword">修改密码</string>
    <string name="messagesetting">消息通知</string>

    <string name="oldpassword">旧密码</string>
    <string name="newpaswword">新密码</string>
    <string name="repeatnewpsd">确认密码</string>
    <string name="inputoldpassword">请输入旧密码</string>
    <string name="inputnewpassword">请输入新密码</string>
    <string name="repeatnewpassword">请再次输入新密码</string>
    <string name="wrongoldpassword">旧密码错误</string>
    <string name="differentpsd">两次密码不符</string>

    <string name="voice">声音</string>
    <string name="shake">振动</string>

    <string name="uploadmoodsuc">发布成功</string>
    <string name="uploadmoodfai">发布失败</string>
    <string name="title_activity_add_mood">添加动态</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>

    <string name="title_activity_setting">设置</string>
    <string name="title_activity_anniversary">纪念日</string>
    <string name="title_activity_health">健康</string>
    <string name="title_activity_disease">疾病</string>
    <string name="title_activity_lover_manager">LoverManagerActivity</string>
    <string name="title_activity_user_info_update">个人资料</string>
    <string name="title_activity_chat">聊天</string>
    <string name="title_activity_ttta">TTTAActivity</string>
    <string name="title_activity_tzfe">TZFEActivity</string>
    <string name="title_activity_space">情侣空间</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_menses">大姨妈</string>
    <string name="title_activity_update_user_nick">修改昵称</string>
    <string name="title_activity_change_password">修改密码</string>
    <string name="title_activity_message_setting">消息通知</string>
    <string name="title_activity_dialog">DialogActivity</string>


</resources>
