<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clover.ui.DiseaseActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include layout="@layout/toolbar_layout"/>
    <LinearLayout
        android:id="@+id/DrugReminderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:id="@+id/loverhealth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/diseasereminder"/>
        <Button
            android:id="@+id/sendDrugReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drugreminder"/>
        </LinearLayout>

    <Button
        android:id="@+id/diseaseReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disease_come_msg"/>
    </LinearLayout>



</RelativeLayout>
